fixed more styling on mobile

--- a/app/components/homePg/projects/projectsStyles.css
+++ b/app/components/homePg/projects/projectsStyles.css
@@ -115,5 +115,9 @@
     width: 100%;
   }
 
+  .portfDiv {
+    margin: 20px;
+  }
+
 }
 
