--- a/app/components/index.css
+++ b/app/components/index.css
@@ -275,7 +275,7 @@ h3 {
     margin-top: .4rem;
   }
   .eachPosition {
-    margin: 50px 20px;
+    margin: 50px 30px;
   }
 
 }
